fix apipricing card display if plan description is too long
display just cli credential btn on simple api key card if API is cms API

--- a/daikoku/javascript/src/style/components/pricingCard.scss
+++ b/daikoku/javascript/src/style/components/pricingCard.scss
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
 
-    height: 200px;
+    height: 250px;
 
     .usage-plan__card__title {
       font-weight: bold;
